# kubernetes-ray

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: ci.yml
docker/: Dockerfile  requirements.txt
examples/: llm_training.py  multimodal_training.py  vision_training.py
k8s/: autoscaler.yaml  gpu-operator.yaml  monitoring.yaml  ray-cluster.yaml
src/: __init__.py
src/core/: __init__.py  checkpoint_manager.py  gpu_allocator.py  ray_cluster.py
src/monitoring/: __init__.py  dashboard.py  metrics_collector.py
src/scheduling/: __init__.py  autoscaler.py  quantum_scheduler.py
src/training/: __init__.py  data_pipeline.py  distributed_trainer.py  mixed_precision.py
tests/: test_allocator.py  test_checkpoint.py  test_scheduler.py  test_training.py
